# bunsen

./: .gitignore  AGENTS.md  CONTEXT.md  Cargo.toml  README.md  pyproject.toml
.github/workflows/: images.yml  release.yml
adapter-digests/: codex  pi
adapters/_alpine-test/: Dockerfile  build-rootfs.sh
adapters/_smoke-test/: Dockerfile  build-rootfs.sh
adapters/base/: Dockerfile
adapters/codex/: Dockerfile  build-rootfs.sh
adapters/pi/: Dockerfile  build-rootfs.sh
bunsen-core/: Cargo.toml
bunsen-core/src/: aider_adapter.rs  branch_pool.rs  bunsen_paths.rs  claude_code_adapter.rs  codex_adapter.rs  dns.rs  egress.rs  events.rs  firecracker.rs  firewall.rs  firewall_check.rs  kernel.rs  main.rs  oci_cache.rs  pi_adapter.rs  privileged_net.rs  run_dir.rs  run_spec.rs  sandbox.rs  sandbox_fetch.rs  sandbox_net.rs  sandbox_nft.rs  sandbox_run.rs  sandbox_supervisor.rs  session.rs  session_cli.rs  smoke_test.rs  supervisor.rs  target_user.rs  workspace_materializer.rs
bunsen-core/src/testdata/: aider_fixture.txt  claude_code_fixture.ndjson  codex_fixture.ndjson  pi_fixture.ndjson
bunsen-init/: Cargo.toml
bunsen-init/src/: cmdline.rs  init_linux.rs  main.rs  network.rs
crucible-core/: Cargo.toml
crucible-core/src/: adapter.rs  aider_adapter.rs  branch_pool.rs  claude_code_adapter.rs  dns.rs  egress.rs  egress_proxy.rs  encoder.rs  events.rs  firecracker.rs  firewall.rs  firewall_check.rs  kernel.rs  main.rs  oci_cache.rs  redactor.rs  run_dir.rs  run_spec.rs  sandbox.rs  sandbox_net.rs  sandbox_nft.rs  sandbox_supervisor.rs  smoke_test.rs  supervisor.rs  ulid.rs  workspace_materializer.rs
crucible-init/: Cargo.toml
crucible-init/src/: cmdline.rs  init_linux.rs  main.rs  network.rs
docs/: adapter-contract.md  macos.md
docs/adr/: 0001-firecracker-as-v1-sandbox-provider.md  0002-subprocess-seam-not-pyo3.md  0003-run-is-observed-not-driven.md  0004-adapter-contract-with-black-box-fallback.md  0005-dual-layer-egress-l3-and-l7.md  0006-secrets-by-env-with-redaction.md  0007-adapter-runs-host-side.md  0008-per-adapter-oci-rootfs.md  0009-pypi-distribution-with-prebuilt-wheels.md  0010-session-and-branch-pool.md  0011-hardened-git-fetch-from-sandbox.md  0012-shipped-base-rootfs-with-ci-default.md  0013-privilege-drop-to-user-script-user.md
docs/agents/: domain.md
kernel/: fetch-vmlinux.sh
python/: pyproject.toml
python/bunsen/: __init__.py  _core_path.py  _events.py  _run.py  _session.py
python/bunsen/harness/: __init__.py  bootstrap.py  render.py  runner.py  scheduler.py
python/crucible/: __init__.py  _core_path.py  _events.py  _run.py
python/tests/: conftest.py  test_core_path.py  test_egress_acceptance.py  test_harness.py  test_session_cli.py  test_session_run_stream.py  test_subprocess_driver.py
python/tests/fixtures/: stub_bunsen_core.py  stub_crucible_core.py
