[build-system]
requires = ["maturin>=1.5,<2"]
build-backend = "maturin"

[project]
name = "crucible"
description = "Python library for orchestrating coding agent Runs via crucible-core"
requires-python = ">=3.11"
dynamic = ["version"]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
]

[tool.maturin]
bindings = "bin"
manifest-path = "crucible-core/Cargo.toml"
module-name = "crucible"
python-source = "python"
strip = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["python/tests"]
