[build-system]
requires = ["maturin>=1.5,<2"]
build-backend = "maturin"

[project]
name = "bunsen"
description = "Python library for orchestrating coding agent Runs via bunsen-core"
requires-python = ">=3.11"
dynamic = ["version"]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
]

[tool.maturin]
bindings = "bin"
manifest-path = "bunsen-core/Cargo.toml"
module-name = "bunsen"
python-source = "python"
strip = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["python/tests"]
