[package]
name = "bunsen-core"
version = "0.3.6"
edition = "2021"

[[bin]]
name = "bunsen-core"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
aho-corasick = "1"
nix = { version = "0.29", features = ["process", "signal", "user"] }
base64 = "0.22"
anyhow = "1"
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls", "json"] }
flate2 = "1"
tar = "0.4"
sha2 = "0.10"
hex = "0.4"
tempfile = "3"
async-trait = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
