[package]
name = "crucible-core"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "crucible-core"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
aho-corasick = "1"
nix = { version = "0.29", features = ["process", "signal"] }

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
tempfile = "3"
