[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "crucible"
version = "0.1.0"
description = "Python library for orchestrating coding agent Runs via crucible-core"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["crucible*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
